# apma2822b_final_project

./: CMakeLists.txt  data.py  test.sh  with_gpu.err  with_gpu.out
cuda/: kernel.cu
data/gpu/: result_0.txt
include/cpp/: particle.h
include/cuda/: kernel.cuh
src/: main.cpp  particle.cpp
